<resources>
    <string name="app_name">RedVid</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="custom_feeds">Custom Feeds</string>
    <string name="search_subreddits">Search subreddits</string>
    <string name="search_button">Search button</string>
    <string name="videos">videos</string>
    <string name="memes">memes</string>
    <string name="funny">funny</string>
    <string name="aww">aww</string>
    <string name="wholesome">wholesome</string>
    <string name="dank">dank</string>
    <string name="news">news</string>
    <string name="sports">sports</string>
    <string name="travel">travel</string>
    <string name="food">food</string>
    <string name="loading">Loading</string>
    <string name="wow_such_empty">Wow, such empty 😿</string>
    <string name="delete_this_feed">Delete this feed</string>
    <string name="allow_nsfw_content">Allow NSFW content</string>
    <string name="create_new">Create new</string>
    <string name="browse_videos">Browse Videos</string>
    <string name="added_no_subreddits">You have not added any subreddits to this feed yet</string>
    <string name="add_subreddits">Add subreddits</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign in</string>
    <string name="front_page">Front Page</string>
    <string name="popular">Popular</string>
    <string name="your_feed">Your Feed</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="watch_anyway">Watch anyway</string>
    <string name="warning_this_video_contains_nsfw_material">Warning: This video contains NSFW material</string>
    <string name="pause_video">Pause video</string>
    <string name="do_not_play_nsfw_content">Do not play NSFW content</string>
    <string name="downloading">Downloading…</string>
    <string name="top_comments">Top Comments</string>
    <string name="user">User</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_vote">Sign in to vote</string>
</resources>