<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/discover"
        android:enabled="true"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/discover"
        app:showAsAction="always" />
    <item
        android:id="@+id/custom_feed"
        android:enabled="true"
        android:icon="@drawable/ic_round_dynamic_feed_24"
        android:title="@string/custom_feeds"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user"
        android:enabled="true"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/user"
        app:showAsAction="ifRoom" />
</menu>