<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.FragmentCustomFeeds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_feeds"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_cf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/custom_feeds"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar_feeds_cf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cf" />

        <LinearLayout
            android:id="@+id/layout_feeds_cf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_feeds_cf">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_new_feed_cf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/layout_feeds_cf"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_multi"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/create_new"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_add_new_feed_cf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/create_new_feed_cf">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/et_card_cf"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/btn_add_cf"
                app:cardCornerRadius="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_feed_cf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="Enter a name without special characters"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_add_cf"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add" />
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/orange"
        app:cornerRadius="50dp"/>
</RelativeLayout>