<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:show_buffering="always" />

    <ProgressBar
        android:id="@+id/gif_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/layout_subreddit_n_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_view" />

    <LinearLayout
        android:id="@+id/layout_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_upvotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_upvote" />

        <TextView
            android:id="@+id/tv_upvotes"
            style="@style/TextViewShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLines="1"
            android:textAlignment="center"
            tools:text="15" />

        <ImageView
            android:id="@+id/iv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/tv_comments"
            style="@style/TextViewShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:maxLines="1"
            android:textAlignment="center"
            tools:text="22" />

        <ImageView
            android:id="@+id/iv_downvote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_downvote" />

        <ProgressBar
            android:id="@+id/progress_download"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_download" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_subreddit_n_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_user"
        app:layout_constraintEnd_toStartOf="@+id/layout_stats"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@color/grey"
                app:shapeAppearance="@style/ImageViewShape50" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon_sr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:shapeAppearance="@style/ImageViewShape50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_subreddit"
                style="@style/TextViewShadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp"
                tools:text="r/subreddit" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextViewShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp"
                tools:text="Title goes here" />

            <TextView
                android:id="@+id/tv_full_title"
                style="@style/TextViewShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="Full Title goes here" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_stats"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@color/grey"
                app:shapeAppearance="@style/ImageViewShape50" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:shapeAppearance="@style/ImageViewShape50" />

        <TextView
            android:id="@+id/tv_user"
            style="@style/TextViewShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="u/user_name • 3h" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_toggle_play"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_pause"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/pause_video" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/uncheck_nsfw"
        style="@style/TextViewShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_toggle_play"
        android:layout_centerHorizontal="true"
        android:text="@string/do_not_play_nsfw_content"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toggle_play" />

    <ImageView
        android:id="@+id/btn_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_toggle_play"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:src="@drawable/ic_volume"
        android:visibility="gone"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_toggle_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_nsfw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_nsfw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/warning_this_video_contains_nsfw_material"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watch_anyway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/watch_anyway"
            app:cornerRadius="10dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_nsfw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_ask_again" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>